# LMSS

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: cpplint.yml
build-solaris/: build-solaris.sh  lmss.p5m.3.res
install/: 100-wey-usbhid.rules  lmss.desktop  postinst  prerm
src/: config.hpp.in  context.hpp  display.cpp  display.hpp  event_loop.cpp  event_loop.hpp  file_descriptor.cpp  file_descriptor.hpp  functions.c  functions.h  lmss.cpp  lmss.hpp  log.c  log.h  logger.cpp  logger.hpp  main.c  main.cpp  rect.hpp  screens.c  screens.h  types.hpp  usb.cpp  usb.hpp  usb_helper.c  usb_helper.h  utilities.c  utilities.h  weyip_usb.c  weyip_usb.h
